# text-serrvice

./: Cargo.toml  README.md
migrations/2020-12-13-210249_create_textinfo/: down.sql  up.sql
src/: db_connection.rs  main.rs  schema.rs
src/textinfo/: mod.rs  model.rs  routes.rs
